add ready landing

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,356 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>Title</title>
-    <link
-      rel="stylesheet"
-      href="./styles/main.scss"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Creative Bakery</title>
+    <link rel="stylesheet" href="./styles/main.scss" />
+    <link rel="icon" href="./images/cookie.png" />
+    <script src="scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+
+  <body class="page">
+    <header class="header page__header">
+      <a href="#" class="logo">
+        <img src="./images/icons/Bakerlab.svg" alt="Bakerlab" />
+      </a>
+      <nav class="header__menu menu">
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#products" class="menu__link">
+              products
+            </a>
+          </li>
+          <li class="menu__item">
+            <a href="#about-us" class="menu__link">
+              about us
+            </a>
+          </li>
+          <li class="menu__item">
+            <a href="#" class="menu__link">
+              blog
+            </a>
+          </li>
+          <li class="menu__item">
+            <a href="#contact-us" class="button button--primary">
+              <span class="icon menu__phone-icon"></span>
+              contact us
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__burger burger"></div>
+    </header>
+
+    <aside class="sidebar page__mobile-menu">
+      <div class="sidebar__content container">
+        <nav class="sidebar__menu menu">
+          <ul class="menu__list menu__list--vertical">
+            <li class="menu__item">
+              <a href="#products" class="menu__link">
+                products
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#about-us" class="menu__link">
+                about us
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">
+                blog
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#contact-us" class="button button--primary">
+                <span class="icon menu__phone-icon"></span>
+                contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="container">
+        <section class="hero">
+          <p class="hero__description">
+            We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+          </p>
+          <h1 class="hero__title">Creative bakery</h1>
+          <div class="hero__image-wrapper">
+            <img 
+              src="./images/cookie.png" 
+              alt="cookie" 
+              class="hero__image" />
+          </div>
+          <a href="#about-us" class="hero__button button button--outline">
+            learn more
+          </a>
+        </section>
+
+        <section class="what-we-bake" id="products">
+          <h2 class="what-we-bake__title">What we bake</h2>
+          <p class="what-we-bake__description">
+            We can customize our cookies right for your needs. Just imagine it
+          </p>
+          <div class="what-we-bake__cards">
+            <article class="what-we-bake__card product-card">
+              <figure class="product-card__preview-wrapper">
+                <img 
+                  src="./images/products/photo-product-01.png" 
+                  alt="product 1" 
+                  class="product-card__preview" />
+                <figcaption class="product-card__preview-label">
+                  Cakes
+                </figcaption>
+              </figure>
+              <h3 class="product-card__title">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </h3>
+              <a href="#contact-us" class="product-card__order-button button button--primary">
+                <span class="icon product-card__order-icon"></span>
+                order
+              </a>
+            </article>
+
+            <article class="what-we-bake__card product-card">
+              <figure class="product-card__preview-wrapper">
+                <img 
+                  src="./images/products/photo-product-02.png" 
+                  alt="product 2" 
+                  class="product-card__preview" />
+                <figcaption class="product-card__preview-label">
+                  Cakes
+                </figcaption>
+              </figure>
+              <h3 class="product-card__title">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </h3>
+              <a href="#contact-us" class="product-card__order-button button button--primary">
+                <span class="icon product-card__order-icon"></span>
+                order
+              </a>
+            </article>
+
+            <article class="what-we-bake__card product-card">
+              <figure class="product-card__preview-wrapper">
+                <img 
+                  src="./images/products/photo-product-03.png" 
+                  alt="product 3" 
+                  class="product-card__preview" />
+                <figcaption class="product-card__preview-label">
+                  Cakes
+                </figcaption>
+              </figure>
+              <h3 class="product-card__title">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </h3>
+              <a href="#contact-us" class="product-card__order-button button button--primary">
+                <span class="icon product-card__order-icon"></span>
+                order
+              </a>
+            </article>
+
+            <article class="what-we-bake__card product-card">
+              <figure class="product-card__preview-wrapper">
+                <img 
+                  src="./images/products/photo-product-04.png" 
+                  alt="product 4" 
+                  class="product-card__preview" />
+                <figcaption class="product-card__preview-label">
+                  Cakes
+                </figcaption>
+              </figure>
+              <h3 class="product-card__title">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </h3>
+              <a href="#contact-us" class="product-card__order-button button button--primary">
+                <span class="icon product-card__order-icon"></span>
+                order
+              </a>
+            </article>
+
+            <article class="what-we-bake__card product-card">
+              <figure class="product-card__preview-wrapper">
+                <img 
+                  src="./images/products/photo-product-05.png" 
+                  alt="product 5" 
+                  class="product-card__preview" />
+                <figcaption class="product-card__preview-label">
+                  Cakes
+                </figcaption>
+              </figure>
+              <h3 class="product-card__title">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </h3>
+              <a href="#contact-us" class="product-card__order-button button button--primary">
+                <span class="icon product-card__order-icon"></span>
+                order
+              </a>
+            </article>
+
+            <article class="what-we-bake__card product-card">
+              <figure class="product-card__preview-wrapper">
+                <img 
+                  src="./images/products/photo-product-06.png" 
+                  alt="product 6" 
+                  class="product-card__preview" />
+                <figcaption class="product-card__preview-label">
+                  Cakes
+                </figcaption>
+              </figure>
+              <h3 class="product-card__title">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </h3>
+              <a href="#contact-us" class="product-card__order-button button button--primary">
+                <span class="icon product-card__order-icon"></span>
+                order
+              </a>
+            </article>
+          </div>
+        </section>
+
+        <section class="about-us" id="about-us">
+          <div class="about-us__top">
+            <h2 class="about-us__title">Few words About us</h2>
+            <p class="about-us__description">
+              Like many design teams, Onfido made the transition from Abstract +
+              Sketch, to Figma in the last couple of years. One of the common
+              resistance points internally before making that switch, was
+              Figma&apos;s lack of Git-style branching that Abstract enabled.
+              The design team had come to rely on branching and had built a lot
+              of our processes around it.
+            </p>
+          </div>
+          <div class="about-us__cards">
+            <article class="about-us__card statistic-card">
+              <p class="statistic-card__value">2015</p>
+              <h3 class="statistic-card__title">Foundation year</h3>
+            </article>
+            <article class="about-us__card statistic-card">
+              <p class="statistic-card__value">23</p>
+              <h3 class="statistic-card__title">Stores</h3>
+            </article>
+            <article class="about-us__card statistic-card">
+              <p class="statistic-card__value">155</p>
+              <h3 class="statistic-card__title">Companies</h3>
+            </article>
+            <article class="about-us__card statistic-card">
+              <p class="statistic-card__value">10k+</p>
+              <h3 class="statistic-card__title">Clients</h3>
+            </article>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <a href="#" class="footer__logo logo">
+            <img src="./images/icons/logo-light.svg" alt="Bakerlab" />
+          </a>
+
+          <div class="footer__links">
+            <h3 class="footer__links-title">Menu</h3>
+            <nav class="footer__nav">
+              <ul class="footer__links-list">
+                <li class="footer__links-item">
+                  <a href="#products" class="footer__link">
+                    products
+                  </a>
+                </li>
+                <li class="footer__links-item">
+                  <a href="#about-us" class="footer__link">
+                    about us
+                  </a>
+                </li>
+                <li class="footer__links-item">
+                  <a href="#" class="footer__link">
+                    blog
+                  </a>
+                </li>
+                <li class="footer__links-item">
+                  <a href="#" class="footer__link">
+                    terms & privacy
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <h2 class="footer__title" id="contact-us">
+            Contact us
+          </h2>
+
+          <div class="footer__links footer__links--call-us">
+            <h3 class="footer__links-title">call us</h3>
+            <ul class="footer__links-list">
+              <li class="footer__links-item">
+                <a href="tel:(629) 555-0129" class="footer__link">
+                  (629) 555-0129
+                </a>
+              </li>
+              <li class="footer__links-item">
+                <a href="tel:(603) 555-0123" class="footer__link">
+                  (603) 555-0123
+                </a>
+              </li>
+              <li class="footer__links-item">
+                <a href="tel:(704) 555-0127" class="footer__link">
+                  (704) 555-0127
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__links footer__links--email">
+            <h3 class="footer__links-title">email us</h3>
+            <ul class="footer__links-list">
+              <li class="footer__links-item">
+                <a href="mailto:bakerlab@example.com" class="footer__link footer__link--email">
+                  bakerlab@example.com
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__links footer__links--social">
+            <ul class="footer__links-list footer__links-list--horizontal">
+              <li class="footer__links-item">
+                <a 
+                  href="https://www.facebook.com/" 
+                  class="footer__icon icon footer__icon--facebook" 
+                  target="_blank"></a>
+              </li>
+              <li class="footer__links-item">
+                <a 
+                  href="https://www.instagram.com/" 
+                  class="footer__icon icon footer__icon--instagram"
+                  target="_blank"></a>
+              </li>
+              <li class="footer__links-item">
+                <a 
+                  href="https://x.com/" 
+                  class="footer__icon icon footer__icon--twitter" 
+                  target="_blank"></a>
+              </li>
+            </ul>
+          </div>
+
+          <p class="footer__copyright">© Bakerlab 2022</p>
+        </div>
+      </div>
+    </footer>
   </body>
+
 </html>
