fixed missing button text

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
                 />
               </svg>
 
-              <span>Contact us</span>
+              Contact us
             </a>
           </ul>
         </nav>
@@ -154,7 +154,7 @@
               />
             </svg>
 
-            <span>Contact us</span>
+            Contact us
           </button>
         </ul>
       </nav>
@@ -187,7 +187,7 @@
             />
           </svg>
 
-          <span>Learn more</span>
+          Learn more
         </button>
       </section>
 
@@ -227,7 +227,7 @@
                 />
               </svg>
 
-              <span class="products__item-button-text">Order</span>
+              Order
             </button>
           </div>
 
@@ -254,7 +254,7 @@
                   d="M16.172 11L10.808 5.63605L12.222 4.22205L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
                 />
               </svg>
-              <span class="products__item-button-text">Order</span>
+              Order
             </button>
           </div>
 
@@ -282,7 +282,7 @@
                   d="M16.172 11L10.808 5.63605L12.222 4.22205L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
                 />
               </svg>
-              <span class="products__item-button-text">Order</span>
+              Order
             </button>
           </div>
 
@@ -309,7 +309,7 @@
                   d="M16.172 11L10.808 5.63605L12.222 4.22205L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
                 />
               </svg>
-              <span class="products__item-button-text">Order</span>
+              Order
             </button>
           </div>
 
@@ -337,7 +337,7 @@
                 />
               </svg>
 
-              <span class="products__item-button-text">Order</span>
+              Order
             </button>
           </div>
 
@@ -365,7 +365,7 @@
                   d="M16.172 11L10.808 5.63605L12.222 4.22205L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
                 />
               </svg>
-              <span class="products__item-button-text">Order</span>
+              Order
             </button>
           </div>
         </div>
