--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!-- #region head -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,14 +7,115 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>BakerLab</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
+  <!-- #endregion -->
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+    <header class="header">
+      <div class="top-bar">
+        <a
+          href="#"
+          class="top-bar__logo-link"
+        >
+          <img
+            src="./images/mainlogo.png"
+            alt="LOGO"
+            class="top-bar__logo"
+          />
+        </a>
+
+        <div class="top-bar__burger">
+          <img
+            src="./images/Icon-menu.png"
+            alt="MENU"
+            class="top-bar__burger-img"
+          />
+        </div>
+
+        <nav class="top-bar__nav">
+          <ul class="top-bar__nav-list">
+            <li class="top-bar__nav-item">
+              <a
+                href="#products"
+                class="top-bar__nav-link"
+              >
+                Products
+              </a>
+            </li>
+            <li class="top-bar__nav-item">
+              <a
+                href="#about-us"
+                class="top-bar__nav-link"
+              >
+                About Us
+              </a>
+            </li>
+            <li class="top-bar__nav-item">
+              <a
+                href="#blog"
+                class="top-bar__nav-link"
+              >
+                Blog
+              </a>
+            </li>
+            <li class="top-bar__nav-item">
+              <img
+                src="./images/Icon-phone.png"
+                alt="PHONE"
+                class="top-bar__nav-phone-img"
+              />
+              <a
+                href="#contact-us"
+                class="top-bar__nav-link"
+              >
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="container">
+        <div class="header__content">
+          <p class="header__text">
+            We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+          </p>
+          <h1 class="header__title">Creative bakery</h1>
+          <div class="header__button">
+            <img
+              src="./images/Icon-cookie.png"
+              alt="COOKIE"
+              class="header__button-img"
+            />
+            <a
+              href="#"
+              class="header__button-text"
+            >
+              Learn more
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
