Fixed the hero__button text in _hero.scss, removing the <p> tag and inserting the text using CSS style using ::after.

--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,7 @@
                 15.1246 16.375 15.1246Z"
               />
             </svg>
-            <span class="hero__button-text">learn more</span>
+            <!-- <p class="hero__button-text">learn more</p> -->
           </button>
         </section>
       </div>
