added header + menu sections

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,170 @@
 <!doctype html>
-<html lang="en">
+<html
+  class="page"
+  lang="en"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Bakerlab</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/icons/icon-cookie.svg"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-bar">
+            <a
+              href="#"
+              class="top-bar__logo"
+            >
+              <img
+                src="./images/logo.png"
+                alt="Bakerlab Logo"
+                class="top-bar__img"
+              />
+            </a>
+            <nav class="nav header__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#products"
+                    class="nav__link"
+                  >
+                    Products
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#about"
+                    class="nav__link"
+                  >
+                    About Us
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#about"
+                    class="nav__link"
+                  >
+                    Blog
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#contacts"
+                    class="nav__link"
+                  >
+                    Contact Us
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <a
+              href="#menu"
+              class="top-bar__icon icon icon--menu"
+            ></a>
+          </div>
+          <div class="header__hero-block">
+            <p class="header__subtitle">
+              We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+            </p>
+            <h1 class="header__title">Creative bakery</h1>
+            <img
+              src="./images/cookie.png"
+              alt="Cookie image"
+              class="header__main-img"
+            />
+            <button
+              href="#"
+              class="header__btn-learn"
+            >
+              <a
+                href="#"
+                class="icon icon--cookie"
+              ></a>
+              Learn more
+            </button>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="top-bar menu__top">
+          <a
+            href="#"
+            class="top-bar__logo"
+          >
+            <img
+              class="top-bar__img"
+              src="images/logo.png"
+              alt="Bakerlab Logo"
+            />
+          </a>
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
+        </div>
+        <div class="menu__content">
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  href="#products"
+                  class="nav__link"
+                >
+                  Products
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#about"
+                  class="nav__link"
+                >
+                  About Us
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#about"
+                  class="nav__link"
+                >
+                  Blog
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#contacts"
+                  class="nav__link"
+                >
+                  Contact Us
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main"></main>
+    <footer class="footer"></footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
