implemented products section

--- a/src/index.html
+++ b/src/index.html
@@ -86,16 +86,13 @@
               alt="Cookie image"
               class="header__main-img"
             />
-            <button
-              href="#"
-              class="header__btn-learn"
+            <a
+              href="#about"
+              class="header__btns"
             >
-              <a
-                href="#"
-                class="icon icon--cookie"
-              ></a>
-              Learn more
-            </button>
+              <span class="icon icon--cookie"></span>
+              <span class="header__btn-learn">Learn more</span>
+            </a>
           </div>
         </div>
       </div>
@@ -163,7 +160,191 @@
       </div>
     </aside>
 
-    <main class="main"></main>
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <section
+            id="products"
+            class="main__section products"
+          >
+            <div class="section__top">
+              <h2 class="section__title">What we bake</h2>
+              <p class="section__subtitle">
+                We can customize our cookies right for your needs. Just imagine
+                it
+              </p>
+            </div>
+            <div class="products__content">
+              <div class="products__line">
+                <article class="products__item product">
+                  <img
+                    src="./images/products/product-01.png"
+                    alt="Product 1"
+                    class="product__img"
+                  />
+                  <h3 class="product__category">Cakes</h3>
+                  <p class="product__description">
+                    Oatmeal cookies with golden raisins, orange zest and
+                    chocolate chips
+                  </p>
+                  <div class="product__actions">
+                    <a
+                      href="#"
+                      class="icon icon--arrow"
+                    ></a>
+                    <a
+                      href="#"
+                      class="product__action-order"
+                    >
+                      Order
+                    </a>
+                  </div>
+                </article>
+                <article class="products__item product">
+                  <img
+                    src="./images/products/product-02.png"
+                    alt="Product 2"
+                    class="product__img"
+                  />
+                  <h3 class="product__category">Cakes</h3>
+                  <p class="product__description">
+                    Chocolate biscuit coffee cake topped with a buttercream and
+                    powder
+                  </p>
+                  <div class="product__actions">
+                    <a
+                      href="#"
+                      class="icon icon--arrow"
+                    ></a>
+                    <a
+                      href="#"
+                      class="product__action-order"
+                    >
+                      Order
+                    </a>
+                  </div>
+                </article>
+              </div>
+              <div class="products__line products__line--reversed">
+                <article class="products__item product">
+                  <img
+                    src="./images/products/product-03.png"
+                    alt="Product 3"
+                    class="product__img"
+                  />
+                  <h3 class="product__category">Donuts</h3>
+                  <p class="product__description">
+                    Light multi-layered croissant strewn with cinammon and
+                    almond “petals”
+                  </p>
+                  <div class="product__actions">
+                    <a
+                      href="#"
+                      class="icon icon--arrow"
+                    ></a>
+                    <a
+                      href="#"
+                      class="product__action-order"
+                    >
+                      Order
+                    </a>
+                  </div>
+                </article>
+                <article class="products__item product">
+                  <img
+                    src="./images/products/product-04.png"
+                    alt="Product 4"
+                    class="product__img"
+                  />
+                  <h3 class="product__category">Donuts</h3>
+                  <p class="product__description">
+                    Light multi-layered croissant strewn with coconut and nuts
+                  </p>
+                  <div class="product__actions">
+                    <a
+                      href="#"
+                      class="icon icon--arrow"
+                    ></a>
+                    <a
+                      href="#"
+                      class="product__action-order"
+                    >
+                      Order
+                    </a>
+                  </div>
+                </article>
+              </div>
+              <div class="products__line">
+                <article class="products__item product">
+                  <img
+                    src="./images/products/product-05.png"
+                    alt="Product 5"
+                    class="product__img"
+                  />
+                  <h3 class="product__category">Cakes</h3>
+                  <p class="product__description">
+                    Cake with chocolate salted caramel, Vanilla frutti pebbles
+                    inside
+                  </p>
+                  <div class="product__actions">
+                    <a
+                      href="#"
+                      class="icon icon--arrow"
+                    ></a>
+                    <a
+                      href="#"
+                      class="product__action-order"
+                    >
+                      Order
+                    </a>
+                  </div>
+                </article>
+                <article class="products__item product">
+                  <img
+                    src="./images/products/product-06.png"
+                    alt="Product 6"
+                    class="product__img"
+                  />
+                  <h3 class="product__category">Cookies</h3>
+                  <p class="product__description">
+                    Oatmeal cookies with golden raisins, orange zest and
+                    chocolate chips
+                  </p>
+                  <div class="product__actions">
+                    <a
+                      href="#"
+                      class="icon icon--arrow"
+                    ></a>
+                    <a
+                      href="#"
+                      class="product__action-order"
+                    >
+                      Order
+                    </a>
+                  </div>
+                </article>
+              </div>
+            </div>
+          </section>
+          <section
+            id="about"
+            class="main__section about"
+          >
+            <div class="section__top">
+              <h2 class="section__title">Few words About us</h2>
+              <p class="section__subtitle">
+                Like many design teams, Onfido made the transition from Abstract
+                + Sketch, to Figma in the last couple of years. One of the
+                common resistance points internally before making that switch,
+                was Figma’s lack of Git-style branching that Abstract enabled.
+                The design team had come to rely on branching and had built a
+                lot of our processes around it.
+              </p>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
     <footer class="footer"></footer>
     <script src="scripts/main.js"></script>
   </body>
