implemented about section

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
               class="header__main-img"
             />
             <a
-              href="#about"
+              href="#products"
               class="header__btns"
             >
               <span class="icon icon--cookie"></span>
@@ -330,9 +330,12 @@
             id="about"
             class="main__section about"
           >
-            <div class="section__top">
-              <h2 class="section__title">Few words About us</h2>
-              <p class="section__subtitle">
+            <div class="about__bg"></div>
+            <div class="section__top section__top--column">
+              <h2 class="section__title section__title--column">
+                Few words About us
+              </h2>
+              <p class="section__subtitle section__subtitle--column">
                 Like many design teams, Onfido made the transition from Abstract
                 + Sketch, to Figma in the last couple of years. One of the
                 common resistance points internally before making that switch,
@@ -340,6 +343,24 @@
                 The design team had come to rely on branching and had built a
                 lot of our processes around it.
               </p>
+            </div>
+            <div class="about__content">
+              <article class="statistic">
+                <h3 class="statistic__title">2015</h3>
+                <p class="statistic__subtitle">Foundation year</p>
+              </article>
+              <article class="statistic">
+                <h3 class="statistic__title">23</h3>
+                <p class="statistic__subtitle">Stores</p>
+              </article>
+              <article class="statistic">
+                <h3 class="statistic__title">155</h3>
+                <p class="statistic__subtitle">Companies</p>
+              </article>
+              <article class="statistic">
+                <h3 class="statistic__title">10k+</h3>
+                <p class="statistic__subtitle">Clients</p>
+              </article>
             </div>
           </section>
         </div>
