--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
               class="top-bar__logo"
             >
               <img
-                src="./images/logo.png"
+                src="images/logo.png"
                 alt="Bakerlab Logo"
                 class="top-bar__img"
               />
