--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
-<!doctype html>
 <!-- #region head -->
-<html lang="en">
+<!doctype html>
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -31,91 +34,231 @@
     ></script>
   </head>
   <!-- #endregion -->
-  <body>
+  <body class="page__body">
+    <!-- #region header -->
     <header class="header">
-      <div class="top-bar">
-        <a
-          href="#"
-          class="top-bar__logo-link"
-        >
-          <img
-            src="./images/mainlogo.png"
-            alt="LOGO"
-            class="top-bar__logo"
-          />
-        </a>
-
-        <div class="top-bar__burger">
-          <img
-            src="./images/Icon-menu.png"
-            alt="MENU"
-            class="top-bar__burger-img"
-          />
+      <div class="header__top">
+        <div class="header__logo--wrapper">
+          <a
+            href="#"
+            class="header__logo"
+          >
+            <img
+              src="./images/mainlogo.png"
+              alt="LOGO"
+              class="header__logo--link"
+            />
+          </a>
         </div>
-
-        <nav class="top-bar__nav">
-          <ul class="top-bar__nav-list">
-            <li class="top-bar__nav-item">
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">
               <a
                 href="#products"
-                class="top-bar__nav-link"
+                class="nav__link"
               >
                 Products
               </a>
             </li>
-            <li class="top-bar__nav-item">
+            <li class="nav__item">
               <a
                 href="#about-us"
-                class="top-bar__nav-link"
+                class="nav__link"
               >
                 About Us
               </a>
             </li>
-            <li class="top-bar__nav-item">
+            <li class="nav__item">
               <a
                 href="#blog"
-                class="top-bar__nav-link"
+                class="nav__link"
               >
                 Blog
               </a>
             </li>
-            <li class="top-bar__nav-item">
+            <li class="nav__item--active">
               <img
                 src="./images/Icon-phone.png"
-                alt="PHONE"
-                class="top-bar__nav-phone-img"
+                alt="Cookie"
+                class="icon--cookie"
               />
               <a
                 href="#contact-us"
-                class="top-bar__nav-link"
+                class="nav__link--active"
               >
-                Contact us
+                Contact Us
               </a>
             </li>
           </ul>
         </nav>
+        <a
+          href="#menu"
+          class="icon icon--burger"
+        >
+          <img
+            src="./images/Icon-menu-bl.png"
+            alt="Burger icon"
+          />
+        </a>
       </div>
-      <div class="container">
-        <div class="header__content">
-          <p class="header__text">
-            We bake your fantasies — croissants, cakes, cookies, and cupcakes.
-          </p>
-          <h1 class="header__title">Creative bakery</h1>
-          <div class="header__button">
-            <img
-              src="./images/Icon-cookie.png"
-              alt="COOKIE"
-              class="header__button-img"
-            />
-            <a
-              href="#"
-              class="header__button-text"
-            >
-              Learn more
-            </a>
-          </div>
+      <div class="header__content">
+        <p class="header__discription">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </p>
+        <h1 class="header__title">Creative bakery</h1>
+
+        <div class="header__img">
+          <img
+            src="./images/BigCookie.png"
+            alt="Cookie"
+            class="header__img-link"
+          />
+        </div>
+
+        <div class="header__button">
+          <img
+            src="./images/Icon-cookie.png"
+            alt="Cookie"
+          />
+          <a
+            href="#"
+            class="header__learn"
+          >
+            Learn more
+          </a>
         </div>
       </div>
     </header>
+    <!-- #endregion -->
+    <!-- #region menu -->
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="menu__top">
+        <div class="menu__logo--wrapper">
+          <a
+            href="#"
+            class="menu__logo"
+          >
+            <img
+              src="./images/mainlogo.png"
+              alt="LOGO"
+              class="menu__logo--link"
+            />
+          </a>
+        </div>
+        <a
+          href="#"
+          class="icon icon--close"
+        >
+          <img
+            src="./images/Icon-close-bl.png"
+            alt="Close icon"
+          />
+        </a>
+      </div>
+
+      <div class="menu__nav">
+        <ul class="menu__nav__list">
+          <li class="menu__nav__item">
+            <a
+              href="#products"
+              class="menu__nav__link"
+            >
+              Products
+            </a>
+          </li>
+          <li class="menu__nav__item">
+            <a
+              href="#about-us"
+              class="menu__nav__link"
+            >
+              About Us
+            </a>
+          </li>
+          <li class="menu__nav__item">
+            <a
+              href="#blog"
+              class="menu__nav__link"
+            >
+              Blog
+            </a>
+          </li>
+          <li class="menu__nav__item--active">
+            <img
+              src="./images/Icon-phone.png"
+              alt="Cookie"
+              class="icon icon--cookie"
+            />
+            <a
+              href="#contact_us"
+              class="menu__nav__link--active"
+            >
+              Contact Us
+            </a>
+          </li>
+        </ul>
+      </div>
+    </aside>
+    <!-- #endregion -->
+    <!-- #region main -->
+    <main class="main">
+      <section
+        class="products"
+        id="products"
+      >
+        <h2 class="section__title">What we bake</h2>
+        <p class="section__p">
+          We can customize our cookies right for your needs. Just imagine it
+        </p>
+        <!-- <article class="product__card">
+          <img
+            src="./images/product-01.png"
+            alt="product-img"
+            class="product__img"
+          />
+          <div class="prodoct__about">
+            <span class="product class">Cakes</span>
+            <p class="product_description">
+              Oatmeal cookies with golden raisins, orange zest and chocolate
+              chips
+            </p>
+            <div class="product__button">
+              <img
+                src="./images/Icon-arrow.png"
+                alt="arrow"
+                class="product__button-img"
+              />
+              <a
+                href="#"
+                class="product__button-text"
+              >
+                ORDER
+              </a>
+            </div>
+          </div>
+        </article> -->
+      </section>
+      <section
+        class="about-us"
+        id="about-us"
+      >
+        <h2>Few words About us</h2>
+      </section>
+      <section
+        class="blog"
+        id="blog"
+      >
+        <h2 class="section__title">What we bake</h2>
+      </section>
+      <section
+        class="contact-us"
+        id="contact-us"
+      >
+        <h2 class="section__title">Contact us</h2>
+      </section>
+    </main>
+    <!-- #endregion -->
   </body>
 </html>
