--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Bakerlab</title>
+    <title>Creative Bakery</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
@@ -30,7 +30,7 @@
               class="top-bar__logo"
             >
               <img
-                src="images/logo.png"
+                src="./images/header-logo.png"
                 alt="Bakerlab Logo"
                 class="top-bar__img"
               />
@@ -55,7 +55,7 @@
                 </li>
                 <li class="nav__item">
                   <a
-                    href="#about"
+                    href="#stats"
                     class="nav__link"
                   >
                     Blog
@@ -64,9 +64,10 @@
                 <li class="nav__item">
                   <a
                     href="#contacts"
-                    class="nav__link"
+                    class="nav__link nav__link--highlight"
                   >
-                    Contact Us
+                    <span class="icon icon--phone"></span>
+                    <span class="nav__link-text">Contact Us</span>
                   </a>
                 </li>
               </ul>
@@ -87,7 +88,7 @@
               class="header__main-img"
             />
             <a
-              href="#products"
+              href="#about"
               class="header__btns"
             >
               <span class="icon icon--cookie"></span>
@@ -110,7 +111,7 @@
           >
             <img
               class="top-bar__img"
-              src="images/logo.png"
+              src="./images/header-logo.png"
               alt="Bakerlab Logo"
             />
           </a>
@@ -140,7 +141,7 @@
               </li>
               <li class="nav__item">
                 <a
-                  href="#about"
+                  href="#stats"
                   class="nav__link"
                 >
                   Blog
@@ -149,9 +150,10 @@
               <li class="nav__item">
                 <a
                   href="#contacts"
-                  class="nav__link"
+                  class="nav__link nav__link--highlight"
                 >
-                  Contact Us
+                  <span class="icon icon--phone"></span>
+                  <span class="nav__link-text">Contact Us</span>
                 </a>
               </li>
             </ul>
@@ -189,11 +191,11 @@
                   </p>
                   <div class="product__actions">
                     <a
-                      href="#"
+                      href="#contacts"
                       class="icon icon--arrow"
                     ></a>
                     <a
-                      href="#"
+                      href="#contacts"
                       class="product__action-order"
                     >
                       Order
@@ -213,11 +215,11 @@
                   </p>
                   <div class="product__actions">
                     <a
-                      href="#"
+                      href="#contacts"
                       class="icon icon--arrow"
                     ></a>
                     <a
-                      href="#"
+                      href="#contacts"
                       class="product__action-order"
                     >
                       Order
@@ -239,11 +241,11 @@
                   </p>
                   <div class="product__actions">
                     <a
-                      href="#"
+                      href="#contacts"
                       class="icon icon--arrow"
                     ></a>
                     <a
-                      href="#"
+                      href="#contacts"
                       class="product__action-order"
                     >
                       Order
@@ -262,11 +264,11 @@
                   </p>
                   <div class="product__actions">
                     <a
-                      href="#"
+                      href="#contacts"
                       class="icon icon--arrow"
                     ></a>
                     <a
-                      href="#"
+                      href="#contacts"
                       class="product__action-order"
                     >
                       Order
@@ -288,11 +290,11 @@
                   </p>
                   <div class="product__actions">
                     <a
-                      href="#"
+                      href="#contacts"
                       class="icon icon--arrow"
                     ></a>
                     <a
-                      href="#"
+                      href="#contacts"
                       class="product__action-order"
                     >
                       Order
@@ -312,11 +314,11 @@
                   </p>
                   <div class="product__actions">
                     <a
-                      href="#"
+                      href="#contacts"
                       class="icon icon--arrow"
                     ></a>
                     <a
-                      href="#"
+                      href="#contacts"
                       class="product__action-order"
                     >
                       Order
@@ -344,7 +346,10 @@
                 lot of our processes around it.
               </p>
             </div>
-            <div class="about__content">
+            <div
+              id="stats"
+              class="about__content"
+            >
               <article class="statistic">
                 <h3 class="statistic__title">2015</h3>
                 <p class="statistic__subtitle">Foundation year</p>
@@ -366,7 +371,123 @@
         </div>
       </div>
     </main>
-    <footer class="footer"></footer>
+    <footer
+      id="contacts"
+      class="footer"
+    >
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__top">
+            <div class="footer__menu">
+              <a
+                href="#"
+                class="footer__logo"
+              >
+                <img
+                  src="./images/footer-logo.png"
+                  alt="Bakerlab Logo"
+                  class="footer__img"
+                />
+              </a>
+              <nav class="footer__nav">
+                <h3 class="footer__subtitle">Menu</h3>
+                <ul class="footer__list">
+                  <li class="footer__item">
+                    <a
+                      href="#products"
+                      class="footer__link"
+                    >
+                      Products
+                    </a>
+                  </li>
+                  <li class="footer__item">
+                    <a
+                      href="#about"
+                      class="footer__link"
+                    >
+                      About Us
+                    </a>
+                  </li>
+                  <li class="footer__item">
+                    <a
+                      href="#stats"
+                      class="footer__link"
+                    >
+                      Blog
+                    </a>
+                  </li>
+                  <li class="footer__item">
+                    <a
+                      href="#contacts"
+                      class="footer__link"
+                    >
+                      Terms & Privacy
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="footer__contact">
+              <h2 class="footer__title">Contact Us</h2>
+              <div class="footer__sections">
+                <div class="footer__section">
+                  <h3 class="footer__subtitle">Call Us</h3>
+                  <div class="footer__contacts">
+                    <a
+                      href="tel:+6295550129"
+                      class="footer__contact-link"
+                    >
+                      (629) 555-0129
+                    </a>
+                    <a
+                      href="tel:+6035550123"
+                      class="footer__contact-link"
+                    >
+                      (603) 555-0123
+                    </a>
+                    <a
+                      href="tel:+7045550127"
+                      class="footer__contact-link"
+                    >
+                      (704) 555-0127
+                    </a>
+                  </div>
+                </div>
+                <div class="footer__section">
+                  <h3 class="footer__subtitle">Email Us</h3>
+                  <a
+                    href="mailto:bakerlab@example.com"
+                    class="footer__email-link"
+                  >
+                    bakerlab@example.com
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="footer__bottom">
+            <div class="footer__socials">
+              <a
+                target="_blank"
+                href="https://www.facebook.com"
+                class="icon icon--facebook"
+              ></a>
+              <a
+                target="_blank"
+                href="https://www.instagram.com"
+                class="icon icon--instagram"
+              ></a>
+              <a
+                target="_blank"
+                href="https://x.com"
+                class="icon icon--twitter"
+              ></a>
+            </div>
+            <div class="footer__copyright">© Bakerlab 2022</div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
