--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,558 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="./images/favicon.png"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+    <header class="header">
+      <div class="header__container">
+        <a
+          href="#"
+          class="header__logo"
+        >
+          <img
+            src="./images/icons/Logo.svg"
+            alt="Bakerlab logo"
+            class="header__logo-img"
+          />
+        </a>
+
+        <nav class="header__nav nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a
+                href="#products"
+                class="nav__link"
+              >
+                Products
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                href="#about"
+                class="nav__link"
+              >
+                About Us
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                href="#blog"
+                class="nav__link"
+              >
+                Blog
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                href="#contact"
+                class="nav__link nav__link--contact"
+              >
+                <img
+                  src="./images/icons/Icon-phone.svg"
+                  alt="Phone"
+                  class="nav__link-icon"
+                />
+                <span class="nav__link-text">Contact us</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <a
+          href="#menu"
+          class="header__burger burger burger--open"
+          aria-label="Open menu"
+        >
+          <div
+            class="burger__icon burger__icon--menu"
+            aria-hidden="true"
+          ></div>
+        </a>
+
+        <a
+          href="#"
+          class="header__burger burger burger--close"
+          aria-label="Close menu"
+        >
+          <div
+            class="burger__icon burger__icon--close"
+            aria-hidden="true"
+          ></div>
+        </a>
+      </div>
+
+      <div
+        id="menu"
+        class="header__menu menu"
+      >
+        <a
+          href="#"
+          class="menu__close-button burger burger--close"
+          aria-label="Close menu"
+        >
+          <div
+            class="burger__icon burger__icon--close"
+            aria-hidden="true"
+          ></div>
+        </a>
+
+        <nav class="menu__nav">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a
+                href="#products"
+                class="menu__link"
+              >
+                Products
+              </a>
+            </li>
+
+            <li class="menu__item">
+              <a
+                href="#about"
+                class="menu__link"
+              >
+                About Us
+              </a>
+            </li>
+
+            <li class="menu__item">
+              <a
+                href="#blog"
+                class="menu__link"
+              >
+                Blog
+              </a>
+            </li>
+
+            <li class="menu__item">
+              <a
+                href="#contact"
+                class="menu__link menu__link--contact"
+              >
+                <img
+                  src="./images/icons/Icon-phone.svg"
+                  alt="Phone"
+                  class="menu__link-icon"
+                />
+                <span class="menu__link-text">Contact us</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main class="main">
+      <section class="hero">
+        <div class="hero__container">
+          <p class="hero__subtitle">
+            We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+          </p>
+          <h1 class="hero__title">Creative Bakery</h1>
+          <div class="hero__image">
+            <img
+              src="./images/Cookie.png"
+              alt="Delicious chocolate chip cookie"
+              class="hero__image-img"
+            />
+          </div>
+          <a
+            href="#contact"
+            class="hero__button"
+          >
+            <img
+              src="./images/icons/Icon-cookie.svg"
+              alt="Cookie icon"
+              class="hero__button-icon"
+            />
+            Learn More
+          </a>
+        </div>
+      </section>
+
+      <section
+        id="products"
+        class="products"
+      >
+        <div class="products__container">
+          <h2 class="products__title">What we bake</h2>
+          <p class="products__description">
+            We can customize our cookies right for your needs. Just imagine it
+          </p>
+
+          <div class="products__grid">
+            <article class="products__card card">
+              <div class="card__image">
+                <img
+                  src="./images/photo-product-01.png"
+                  alt="Cakes"
+                  class="card__image-img"
+                />
+              </div>
+              <h3 class="card__title">Cakes</h3>
+              <p class="card__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                href="#contact"
+                class="card__button"
+              >
+                <img
+                  src="./images/icons/Icon-arrow.svg"
+                  alt="Arrow"
+                  class="card__button-icon"
+                />
+                <span class="card__button-text">Order</span>
+              </a>
+            </article>
+
+            <article class="products__card card">
+              <div class="card__image">
+                <img
+                  src="./images/photo-product-02.png"
+                  alt="Cakes"
+                  class="card__image-img"
+                />
+              </div>
+              <h3 class="card__title">Cakes</h3>
+              <p class="card__description">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+              <a
+                href="#contact"
+                class="card__button"
+              >
+                <img
+                  src="./images/icons/Icon-arrow.svg"
+                  alt="Arrow"
+                  class="card__button-icon"
+                />
+                <span class="card__button-text">Order</span>
+              </a>
+            </article>
+
+            <article class="products__card card">
+              <div class="card__image">
+                <img
+                  src="./images/photo-product-03.png"
+                  alt="Cakes"
+                  class="card__image-img"
+                />
+              </div>
+              <h3 class="card__title">Donuts</h3>
+              <p class="card__description">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+              <a
+                href="#contact"
+                class="card__button"
+              >
+                <img
+                  src="./images/icons/Icon-arrow.svg"
+                  alt="Arrow"
+                  class="card__button-icon"
+                />
+                <span class="card__button-text">Order</span>
+              </a>
+            </article>
+
+            <article class="products__card card">
+              <div class="card__image">
+                <img
+                  src="./images/photo-product-04.png"
+                  alt="Cakes"
+                  class="card__image-img"
+                />
+              </div>
+              <h3 class="card__title">Donuts</h3>
+              <p class="card__description">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+              <a
+                href="#contact"
+                class="card__button"
+              >
+                <img
+                  src="./images/icons/Icon-arrow.svg"
+                  alt="Arrow"
+                  class="card__button-icon"
+                />
+                <span class="card__button-text">Order</span>
+              </a>
+            </article>
+
+            <article class="products__card card">
+              <div class="card__image">
+                <img
+                  src="./images/photo-product-05.png"
+                  alt="Cakes"
+                  class="card__image-img"
+                />
+              </div>
+              <h3 class="card__title">Cakes</h3>
+              <p class="card__description">
+                Chocolate salted caramel, Vanilla frutti pebbles
+              </p>
+              <a
+                href="#contact"
+                class="card__button"
+              >
+                <img
+                  src="./images/icons/Icon-arrow.svg"
+                  alt="Arrow"
+                  class="card__button-icon"
+                />
+                <span class="card__button-text">Order</span>
+              </a>
+            </article>
+
+            <article class="products__card card">
+              <div class="card__image">
+                <img
+                  src="./images/photo-product-06.png"
+                  alt="Cakes"
+                  class="card__image-img"
+                />
+              </div>
+              <h3 class="card__title">Cookies</h3>
+              <p class="card__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                href="#contact"
+                class="card__button"
+              >
+                <img
+                  src="./images/icons/Icon-arrow.svg"
+                  alt="Arrow"
+                  class="card__button-icon"
+                />
+                <span class="card__button-text">Order</span>
+              </a>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section
+        id="about"
+        class="about"
+      >
+        <div class="about__container">
+          <h2 class="about__title">
+            Few words
+            <br />
+            about us
+          </h2>
+          <p class="about__description">
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figma's
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </p>
+          <ul class="about__stats">
+            <li class="about__stat">
+              <span class="about__stat-number">2015</span>
+              <span class="about__stat-label">Foundation year</span>
+            </li>
+            <li class="about__stat">
+              <span class="about__stat-number">23</span>
+              <span class="about__stat-label">Stores</span>
+            </li>
+            <li class="about__stat">
+              <span class="about__stat-number">155</span>
+              <span class="about__stat-label">Companies</span>
+            </li>
+            <li class="about__stat">
+              <span class="about__stat-number">10K+</span>
+              <span class="about__stat-label">Clients</span>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <footer
+      id="contact"
+      class="footer"
+    >
+      <div class="footer__container">
+        <div class="footer__brand">
+          <a
+            href="#"
+            class="footer__logo"
+          >
+            <img
+              src="./images/icons/Logo_white.svg"
+              alt="Bakerlab logo"
+              class="footer__logo-img"
+            />
+          </a>
+
+          <div class="footer__nav">
+            <p class="footer__nav-title">MENU</p>
+
+            <ul class="footer__nav-list">
+              <li class="footer__nav-item">
+                <a
+                  href="#products"
+                  class="footer__nav-link"
+                >
+                  Products
+                </a>
+              </li>
+
+              <li class="footer__nav-item">
+                <a
+                  href="#about"
+                  class="footer__nav-link"
+                >
+                  About Us
+                </a>
+              </li>
+
+              <li class="footer__nav-item">
+                <a
+                  href="#blog"
+                  class="footer__nav-link"
+                >
+                  Blog
+                </a>
+              </li>
+
+              <li class="footer__nav-item">
+                <a
+                  href="#"
+                  class="footer__nav-link"
+                >
+                  Terms &amp; Privacy
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__contacts">
+          <h2 class="footer__contacts-title">CONTACT US</h2>
+
+          <div class="footer__contact-block">
+            <p class="footer__contact-block-title">CALL US</p>
+            <ul class="footer__contact-block-list">
+              <li class="footer__contact-block-list-item">
+                <a
+                  href="tel:6295550129"
+                  class="footer__contact-block-list-item"
+                >
+                  (629) 555-0129
+                </a>
+              </li>
+              <li class="footer__contact-block-list-item">
+                <a
+                  href="tel:6035550123"
+                  class="footer__contact-block-list-item"
+                >
+                  (603) 555-0123
+                </a>
+              </li>
+              <li class="footer__contact-block-list-item">
+                <a
+                  href="tel:7045550127"
+                  class="footer__contact-block-list-item"
+                >
+                  (704) 555-0127
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__contact-block">
+            <p class="footer__contact-block-title">EMAIL US</p>
+            <a
+              href="mailto:bakerlab@example.com"
+              class="footer__email"
+            >
+              bakerlab@example.com
+            </a>
+          </div>
+        </div>
+
+        <ul class="footer__social">
+          <li class="footer__social-item">
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="footer__social-link"
+            >
+              <img
+                src="./images/icons/Icon-facebook.svg"
+                alt="Facebook"
+                target="_blank"
+                class="footer__social-icon"
+              />
+            </a>
+          </li>
+          <li class="footer__social-item">
+            <a
+              href="https://www.instagram.com/"
+              class="footer__social-link"
+              target="_blank"
+            >
+              <img
+                src="./images/icons/Icon-instagram.svg"
+                alt="Instagram"
+                class="footer__social-icon"
+              />
+            </a>
+          </li>
+          <li class="footer__social-item">
+            <a
+              href="https://x.com/"
+              class="footer__social-link"
+              target="_blank"
+            >
+              <img
+                src="./images/icons/Icon-twitter_default.svg"
+                alt="Twitter"
+                class="footer__social-icon"
+              />
+            </a>
+          </li>
+        </ul>
+
+        <p class="footer__copyright">© Bakerlab 2025</p>
+      </div>
+    </footer>
   </body>
 </html>
